# true-rs

./: Cargo.toml  README.md
src/: cli.rs  main.rs
src/cmd/: mod.rs
